<resources>
    <string name="app_name">EventIt</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create An Account</string>
    <string name="title_activity_register">Register</string>
    <!-- Main Menu -->
    <string name="subscribe_title">Subscribe</string>
    <string name="check_in">Subscribe</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">dashboard</string>
    <string name="menu_events_title">events</string>
    <string name="log_out">Log Out</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
</resources>
