<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@mipmap/ic_action_home"
        android:title="@string/dashboard"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_dashboard"
        android:icon="@mipmap/ic_action_dasboard"
        android:title="@string/dashboard"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_events"
        android:icon="@mipmap/ic_action_events"
        android:title="@string/menu_events_title"
        app:showAsAction="always"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>


</menu>